[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Choi702 <jaeychoi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.5"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
